# speedtest

./: .gitignore  README.md  pyproject.toml
src/: my_script.sh  outside-speedtest.json  show.ipynb
