[project]
name = "speedtest-logging"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hayato Arai", email = "hayato4d@gmail.com" }
]
dependencies = [
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/speedtest_logging"]
